--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/damyantjain/use-form-auto-save#readme",
   "devDependencies": {
+    "@types/react": "^19.0.10",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "react": "^19.0.0"
   }
 }
