--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React hook for automatically saving and restoring form data.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   },
