--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A React hook for automatically saving and restoring form data.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,11 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.13.3",
+    "process": "^0.11.10",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   },
