--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "react": "^19.0.0"
+    "react": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   }
 }
