--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "jest": "^29.7.0",
@@ -49,5 +50,8 @@
     "process": "^0.11.10",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
   }
 }
